fix alignment, add padding after titles

--- a/css/home.css
+++ b/css/home.css
@@ -224,3 +224,8 @@
     display: block;
     margin: 50px auto 20px;
 }
+
+.speaker-topic {
+    margin: 0 0 10px 65px;
+    font-weight: 600;
+}
